# agent-core

./: .gitignore  CHANGELOG.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/agent_core/: main.py  run.py
src/agent_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/agent_core/agent/: __init__.py  agent.py  executor.py  llm_planner.py  llm_router.py  memory_manager.py  planner.py  router.py
src/agent_core/config/: logging.py
src/agent_core/core/: agent.py  base_agent.py  llm_planner.py  planner.py  simple_agent.py  supervisor.py  supervisor_agent.py  worker_agent.py
src/agent_core/infra/: config.py  health.py  logging.py  timeouts.py
src/agent_core/llm/: base.py  client.py  factory.py  fallback_router.py
src/agent_core/llm/providers/: gemini_client.py  mock.py  openai_client.py
src/agent_core/memory/: base.py  file.py  file_memory.py  in_memory.py
src/agent_core/tools/: _validate_base.py  _validate_registry.py  antigravity_tool.py  base.py  registry.py
src/src/agent_core/: main.py
src/src/agent_core/core/: agent.py  async_agent.py  async_simple_agent.py  simple_agent.py
src/src/agent_core/memory/: base.py  in_memory.py
tests/: test_executor.py  test_failure_modes.py
