[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-core"
version = "0.1.0"
description = "Core agent runtime"
requires-python = ">=3.12"

dependencies = []

[project.scripts]
agent = "agent_core.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
